添加分布式锁的代码